Fix updater.sh Fix exec stuff